--- a/koi_fe/src/page/HomePage/HomePage.css
+++ b/koi_fe/src/page/HomePage/HomePage.css
@@ -1,107 +1,102 @@
 .banner {
-    position: relative;
-    text-align: center;
-    color: white;
-    height: 400px;
-    background-image: url('src/assets/koiBanner.jpg');
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .banner-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-  }
-  
-  .banner h1 {
-    font-size: 3rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .banner h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  
-  .btn-banner {
-    background-color: #b02a37;
-    padding: 0.8rem 1.5rem;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .btn-banner:hover {
-    background-color: #a0232e;
-  }
-  .introduction-section {
-    background-color: #f5f5f5;
+  position: relative;
+  text-align: center;
+  color: white;
+  height: 400px;
+  background-image: url("src/assets/koiBanner.jpg");
+  background-size: cover;
+  background-position: center;
+}
 
-  }
-  
-  .introduction-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #b02a37;
-    padding: 2rem;
-    color: white;
-  }
-  
-  
-  .text-section {
-    flex: 3;
-  }
-  
-  .text-section h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-  
-  .text-section p {
-    font-size: 1.2rem;
-    line-height: 1.6;
-  }
-  
-  .image-section {
-    flex: 1;
-  }
-  
-  .image-section img {
-    border-radius: 10px;
-    max-width: 100%;
-    height: auto;
-  }
-  
+.banner-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+}
 
-  .species-section {
-    text-align: center;
-    margin-top: 3rem;
-  }
-  
-  .species-section h3 {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
-    border-bottom: 2px solid #b02a37;
-    display: inline-block;
-    padding-bottom: 0.5rem;
-  }
-  
-  .species-section p {
-    font-size: 1.2rem;
-    color: #666;
-    margin-top: 0.5rem;
-  }
+.banner h1 {
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+}
 
-  .KoiProductBtn{
-    margin-left: 46%;
-  }
+.banner h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
 
+.btn-banner {
+  background-color: #b02a37;
+  padding: 0.8rem 1.5rem;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
 
+.btn-banner:hover {
+  background-color: #a0232e;
+}
+.introduction-section {
+  background-color: #f5f5f5;
+}
+
+.introduction-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #b02a37;
+  padding: 2rem;
+  color: white;
+}
+
+.text-section {
+  flex: 3;
+}
+
+.text-section h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.text-section p {
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+.image-section {
+  flex: 1;
+}
+
+.image-section img {
+  border-radius: 10px;
+  max-width: 100%;
+  height: auto;
+}
+
+.species-section {
+  text-align: center;
+  margin-top: 3rem;
+}
+
+.species-section h3 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 2px solid #b02a37;
+  display: inline-block;
+  padding-bottom: 0.5rem;
+}
+
+.species-section p {
+  font-size: 1.2rem;
+  color: #666;
+  margin-top: 0.5rem;
+}
+
+.KoiProductBtn {
+  margin-left: 46%;
+}
 
 /* Header */
 .header {
@@ -141,7 +136,6 @@
   font-size: 20px;
   margin-bottom: 30px;
 }
-
 
 .newsItem {
   background-color: white;
