--- a/koi_fe/src/page/RegisterPage/RegisterPage.css
+++ b/koi_fe/src/page/RegisterPage/RegisterPage.css
@@ -1,10 +1,8 @@
 .registration-form {
-  width: 683px;
+  width:auto ;
   margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ddd;
+  padding: 20px; 
   border-radius: 5px;
-  background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,14 +10,16 @@
 
 .registration-form h2 {
   font-size: 24px;
-  font-family: "Brygada 1918", serif;
+  font-family: "Brygada 1918", serif ;
+  font-weight: bold;
   color: #000000;
   text-align: center;
-  margin-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .registration-form form {
   width: 100%;
+  height:max-content;
 }
 
 .form-group {
@@ -32,7 +32,7 @@
 
 .registration-form input {
   width: 351.5px;
-  height: 20px;
+  height: 40px;
   padding: 10px;
   margin: 0px;
   margin-bottom: 5px;
@@ -40,32 +40,6 @@
   background-color: #fbfbfb;
   color: #000000;
   border-radius: 10px;
-}
-
-/* Xử lý màu nền và chữ khi autofill */
-input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px #9a9898 inset !important; /* Đảm bảo nền là màu #FBFBFB */
-  -webkit-text-fill-color: #000000 !important; /* Đảm bảo chữ là màu đen */
-  color: #000000 !important; /* Thiết lập lại màu chữ */
-}
-
-input:-webkit-autofill:focus {
-  -webkit-box-shadow: 0 0 0px 1000px #fbfbfb inset !important;
-  -webkit-text-fill-color: #000000 !important; /* Đảm bảo chữ là màu đen khi focus */
-  color: #000000 !important;
-}
-
-input:autofill {
-  box-shadow: 0 0 0px 1000px #fbfbfb inset !important;
-  -webkit-text-fill-color: #000000 !important;
-  color: #000000 !important;
-}
-
-/* Hiệu ứng khi focus */
-.registration-form input:focus {
-  outline: none;
-  border: 1px solid #a13422;
-  box-shadow: 0 0 5px rgba(161, 52, 34, 0.5);
 }
 
 /* Tooltip khi có lỗi */
@@ -111,6 +85,15 @@ input:autofill {
   border-color: transparent transparent #ddd transparent;
 }
 
+/* Hiệu ứng khi focus */
+.registration-form input:focus {
+  outline: none;
+  border: 1px solid #a13422;
+  box-shadow: 0 0 5px rgba(161, 52, 34, 0.5);
+}
+
+
+
 .register-button {
   background-color: #a13422;
   color: white;
@@ -119,7 +102,10 @@ input:autofill {
   border-radius: 10px;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
+  display: block;
+  margin: 0 auto; /* Thêm dòng này để căn giữa */
 }
+
 
 .register-button:hover {
   background-color: #e14528;
