--- a/koi_fe/src/page/LoginPage/LoginPage.css
+++ b/koi_fe/src/page/LoginPage/LoginPage.css
@@ -1,13 +1,3 @@
-/* Ensures the body and html take full height */
-html, body {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f9f9f9; /* Background color for the entire page */
-}
-
 .login-container {
   width: 400px;
   padding: 20px;
@@ -81,18 +71,18 @@ html, body {
   text-align: center;
 }
 
-.login-redirect {
+.register-redirect {
   color: #000000;
   font-family: 'Brygada 1918', serif;
   text-decoration: none;
   font-size: 14px;
 }
 
-.login-redirect a {
+.register-redirect a {
   color: #E93131;
   text-decoration: none;
 }
 
-.login-redirect a:hover {
+.register-redirect a:hover {
   text-decoration: underline;
 }
