add cards in newsSection and productList

--- a/koi_fe/src/page/HomePage/HomePage.css
+++ b/koi_fe/src/page/HomePage/HomePage.css
@@ -26,17 +26,11 @@
   margin-bottom: 1rem;
 }
 
-.btn-banner {
-  background-color: #b02a37;
-  padding: 0.8rem 1.5rem;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
+.btn-banner{
   text-decoration: none;
-}
-
-.btn-banner:hover {
-  background-color: #a0232e;
+  font-weight: bold;
+  color: white;
+  padding: 0.8rem 1.5rem;
 }
 .introduction-section {
   background-color: #f5f5f5;
@@ -112,19 +106,18 @@
   cursor: pointer;
 }
 
-.viewMoreButton:hover {
-  background-color: #d32f2f;
-}
 
+ .news{
+  background-color: #212121;
+  margin-bottom: 40px;
+  padding: 40px;
+ }
 /* News Section */
 .newsSection {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #212121;
-  padding: 40px;
   color: white;
-  margin-bottom: 40px;
 }
 
 .title {
@@ -195,4 +188,8 @@
 
 .author {
   font-weight: bold;
+}
+
+.productList{
+  margin: 10px;
 }
