--- a/koi_fe/src/component/Header/Header.css
+++ b/koi_fe/src/component/Header/Header.css
@@ -10,7 +10,7 @@ body {
 .header {
   width: 100%;
   background-color: #982b1c;
-  color: white;
+  /* color: white; */
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
