--- a/koi_fe/src/page/HomePage/HomePage.css
+++ b/koi_fe/src/page/HomePage/HomePage.css
@@ -26,12 +26,7 @@
   margin-bottom: 1rem;
 }
 
-.btn-banner{
-  text-decoration: none;
-  font-weight: bold;
-  color: white;
-  padding: 0.8rem 1.5rem;
-}
+
 .introduction-section {
   background-color: #f5f5f5;
 }
@@ -69,12 +64,12 @@
   height: auto;
 }
 
-.species-section {
+.species-section, .feedback-section {
   text-align: center;
   margin-top: 3rem;
 }
 
-.species-section h3 {
+.species-section h3, .feedback-section h3 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
   border-bottom: 2px solid #b02a37;
@@ -82,7 +77,7 @@
   padding-bottom: 0.5rem;
 }
 
-.species-section p {
+.species-section p, .feedback-section p {
   font-size: 1.2rem;
   color: #666;
   margin-top: 0.5rem;
@@ -115,6 +110,7 @@
 
  /*Service section*/
  .serviceSection{
+  padding-top: 20px;
   color: white;
   margin-bottom: 40px;
   background-color: #b02a37;
