--- a/koi_fe/src/page/ProductDetail/ProductDetail.css
+++ b/koi_fe/src/page/ProductDetail/ProductDetail.css
@@ -17,9 +17,8 @@
     margin-top: 2%;
     font-weight: 500;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 5%;
 }
 
 .productBtnGroup{
-    margin: 5%; 
+    margin-top: 2%;
 }
