--- a/koi_fe/src/page/HomePage/HomePage.css
+++ b/koi_fe/src/page/HomePage/HomePage.css
@@ -17,7 +17,7 @@
 }
 
 .banner h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -237,4 +237,11 @@ a {
 
 .productList{
   margin: 10px;
+}
+.web-container {
+  width: 80%; /* Chiếm 80% chiều rộng màn hình */
+  margin: 30px auto; /* Căn giữa nội dung */
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #fff;
 }
