--- a/koi_fe/src/page/HomePage/HomePage.css
+++ b/koi_fe/src/page/HomePage/HomePage.css
@@ -90,17 +90,29 @@
 }
 
 /* Header */
-.headerShowMoreButton {
+.species-header {
   display: flex;
-  justify-content: center;
-  padding: 20px 0;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+
+.text-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.text-content h3,
+.text-content p {
+  margin: 0;
+  text-align: left;
 }
 
 .viewMoreButton {
-  padding: 10px 20px;
-  font-size: 18px;
-  border-radius: 5px;
-  cursor: pointer;
+  font-size: 14px;
+  padding: 8px 16px;
+  margin-right: 10px;
 }
 
 .news {
