--- a/koi_fe/src/page/LoginPage/LoginPage.css
+++ b/koi_fe/src/page/LoginPage/LoginPage.css
@@ -1,11 +1,11 @@
 /* Wrapper for centering the login form on the page */
 .login-page {
   display: flex;
-  justify-content: center;  /* Horizontally center */
-  align-items: center;      /* Vertically center */
-  height: 100vh;            /* Full viewport height */
+  justify-content: center; /* Horizontally center */
+  align-items: center; /* Vertically center */
+  height: 100vh; /* Full viewport height */
   background-color: #f4f4f4; /* Light background color */
-  margin: 0;                /* Remove default margins */
+  margin: 0; /* Remove default margins */
 }
 
 /* Container for the login form */
@@ -25,10 +25,10 @@
 /* Title of the login form */
 .login-title {
   font-size: 24px;
-  font-family: 'Brygada 1918', serif;
+  font-family: "Brygada 1918", serif;
   color: #000000;
   margin-bottom: 20px;
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 /* Style for the form itself */
@@ -84,7 +84,7 @@
   text-decoration: none;
   font-size: 14px;
   margin-top: 10px;
-  font-family: 'Brygada 1918', serif;
+  font-family: "Brygada 1918", serif;
 }
 
 /* Hover effect for the forgot password link */
@@ -101,7 +101,7 @@
 /* Style for the register text */
 .register-redirect {
   font-size: 14px;
-  font-family: 'Brygada 1918', serif;
+  font-family: "Brygada 1918", serif;
   color: #333;
 }
 
