--- a/koi_fe/src/page/ProfileUser/ProfileUser.css
+++ b/koi_fe/src/page/ProfileUser/ProfileUser.css
@@ -11,10 +11,10 @@
   border-right: 1px solid #dee2e6; /* Đường kẻ dọc bên phải */
 }
 
-.table th:last-child,
+/* .table th:last-child,
 .table td:last-child {
   border-right: none; /* Không có đường kẻ bên phải cho ô cuối */
-}
+/* }  */
 
 .list-unstyled li {
   cursor: pointer;
