--- a/koi_fe/src/page/Checkout/Checkout.css
+++ b/koi_fe/src/page/Checkout/Checkout.css
@@ -3,7 +3,7 @@
     border-bottom: 6px solid red;
     border-width: 2px;
     margin-bottom: 2rem;
-    width: 20%;
+    width: 35%;
   }
   
   .TitleSection h3{
@@ -14,13 +14,16 @@
     margin-left: 1%;
   }
 
+  .OrderSection{
+    width: 100%
+  }
+
   .OrderTitleSection{
     margin-top: 2rem;
     border-bottom: 6px solid red;
     border-width: 2px;
     margin-bottom: 2rem;
-    width: 100%;
-    text-align: end;
+    width: 20%;
   }
 
   .TitleFlexSection{
@@ -28,5 +31,5 @@
     border-bottom: 6px solid red;
     border-width: 2px;
     margin-bottom: 2rem;
-    width: 100%;
+    width: 20%;
   }
