--- a/koi_fe/src/page/Checkout/Checkout.css
+++ b/koi_fe/src/page/Checkout/Checkout.css
@@ -1,35 +1,35 @@
 .TitleSection {
-    margin-top: 2rem;
-    border-bottom: 6px solid red;
-    border-width: 2px;
-    margin-bottom: 2rem;
-    width: 35%;
-  }
-  
-  .TitleSection h3{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-  }
+  margin-top: 2rem;
+  border-bottom: 6px solid red;
+  border-width: 2px;
+  margin-bottom: 2rem;
+  width: 35%;
+}
 
-  .checkOutInfo{
-    margin-left: 1%;
-  }
+.TitleSection h3 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
-  .OrderSection{
-    width: 100%
-  }
+.checkOutInfo {
+  margin-left: 1%;
+}
 
-  .OrderTitleSection{
-    margin-top: 2rem;
-    border-bottom: 6px solid red;
-    border-width: 2px;
-    margin-bottom: 2rem;
-    width: 20%;
-  }
+.OrderSection {
+  width: 100%;
+}
 
-  .TitleFlexSection{
-    margin-top: 2rem;
-    border-bottom: 6px solid red;
-    border-width: 2px;
-    margin-bottom: 2rem;
-    width: 20%;
-  }
+.OrderTitleSection {
+  margin-top: 2rem;
+  border-bottom: 6px solid red;
+  border-width: 2px;
+  margin-bottom: 2rem;
+  width: 20%;
+}
+
+.TitleFlexSection {
+  margin-top: 2rem;
+  border-bottom: 6px solid red;
+  border-width: 2px;
+  margin-bottom: 2rem;
+  width: 20%;
+}
