--- a/koi_fe/src/page/SalesConsignmentPage/SalesConsignmentPage.css
+++ b/koi_fe/src/page/SalesConsignmentPage/SalesConsignmentPage.css
@@ -2,19 +2,16 @@
   width: 100%;
   margin-top: 50px;
   padding: 30px;
-  background-color: #f5f5f5; 
-  border-radius: 8px; 
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .policy-sales-container h2,
 h5 {
-  color: #333; /
+  color: #333;
 }
 
 .policy-sales-container li {
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
-
-
-
