--- a/koi_fe/src/component/Feedback/Feedback.css
+++ b/koi_fe/src/component/Feedback/Feedback.css
@@ -2,6 +2,7 @@
   max-width: 800px;
   margin: auto;
   text-align: center;
+  position: relative;
 }
 
 .feedback-card {
@@ -10,13 +11,6 @@
   background-color: #fff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-}
-
-.feedback-image img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  margin-bottom: 20px;
 }
 
 .feedback-title {
@@ -47,7 +41,6 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  /* background-color: #e53935; */
   color: #333;
   border-radius: 20px;
   padding: 5px 10px;
@@ -56,19 +49,6 @@
 
 .feedback-user-info svg {
   font-size: 1.5em;
-}
-
-.feedback-user-text {
-  text-align: left;
-}
-
-.feedback-user-role {
-  font-size: 0.8em;
-}
-
-.feedback-user-name {
-  font-weight: bold;
-  font-size: 1em;
 }
 
 .feedback-nav-btn {
@@ -85,6 +65,7 @@
   border: none;
   color: #333;
   transition: background-color 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .feedback-nav-btn:hover {
@@ -97,4 +78,82 @@
 
 .feedback-nav-btn.right {
   right: 10px;
+}
+
+.feedback-card {
+  border: none;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  transition: transform 0.3s ease, opacity 0.3s ease; /* Transition cho hiệu ứng lướt */
+}
+
+/* Hiệu ứng lướt qua */
+.slide-in-right {
+  transform: translateX(100%);
+  opacity: 0;
+  animation: slideInRight 0.3s forwards;
+}
+
+.slide-out-left {
+  transform: translateX(0);
+  opacity: 1;
+  animation: slideOutLeft 0.3s forwards;
+}
+
+.slide-in-left {
+  transform: translateX(-100%);
+  opacity: 0;
+  animation: slideInLeft 0.3s forwards;
+}
+
+.slide-out-right {
+  transform: translateX(0);
+  opacity: 1;
+  animation: slideOutRight 0.3s forwards;
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOutLeft {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOutRight {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(100%);
+    opacity: 0;
+  }
 }
